# ScreenCapture

./: CMakeLists.txt  README.md  ScreenCapture.cpp  ScreenCapture.def
